[package]
name = "solana-state-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
chrono = "0.4.38"
colored = "2.1.0"
env_logger = "0.11.5"
libp2p = { version = "0.54.0", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
log = "0.4.22"
sha2 = "0.10.8"
tokio =  { version = "1.39.2", features = ["full"] }
